// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getQueryConfig with archivist when request can access archive generates config for multi-signer requests 1`] = `
{
  "schema": "network.xyo.module.config",
  "security": {
    "allowed": {
      "network.xyo.query.module.discover": [
        [
          "3a15a6c96665931b76c1d2a587ea1132dbfdc266",
          "b3bbeb946d88cd5fe70146a6bb276c7b384f6582",
        ],
      ],
    },
  },
}
`;

exports[`getQueryConfig with archivist when request can access archive generates config for nested-signed multi-signer requests 1`] = `
{
  "schema": "network.xyo.module.config",
  "security": {
    "allowed": {
      "network.xyo.query.module.discover": [
        [
          "3a15a6c96665931b76c1d2a587ea1132dbfdc266",
          "b3bbeb946d88cd5fe70146a6bb276c7b384f6582",
        ],
        [
          "ca2e94ac3ae1084072b3a4407881bf940dc2019c",
        ],
        [
          "f59810a9da8a99e464355a411afe06f8c2d1c4b8",
        ],
      ],
    },
  },
}
`;

exports[`getQueryConfig with archivist when request can access archive generates config for nested-signed requests 1`] = `
{
  "schema": "network.xyo.module.config",
  "security": {
    "allowed": {
      "network.xyo.query.module.discover": [
        [
          "3a15a6c96665931b76c1d2a587ea1132dbfdc266",
          "b3bbeb946d88cd5fe70146a6bb276c7b384f6582",
        ],
        [
          "ca2e94ac3ae1084072b3a4407881bf940dc2019c",
          "f59810a9da8a99e464355a411afe06f8c2d1c4b8",
        ],
      ],
    },
  },
}
`;

exports[`getQueryConfig with archivist when request can access archive generates config for single-signer requests 1`] = `
{
  "schema": "network.xyo.module.config",
  "security": {
    "allowed": {
      "network.xyo.query.module.discover": [
        [
          "3a15a6c96665931b76c1d2a587ea1132dbfdc266",
        ],
      ],
    },
  },
}
`;

exports[`getQueryConfig with archivist when request can access archive generates config for unsigned requests 1`] = `
{
  "schema": "network.xyo.module.config",
  "security": {
    "allowed": {},
  },
}
`;

exports[`getQueryConfig with module generates query config for current query 1`] = `
{
  "schema": "network.xyo.module.config",
  "security": {
    "allowed": {
      "network.xyo.query.module.discover": [
        [
          "3a15a6c96665931b76c1d2a587ea1132dbfdc266",
        ],
      ],
    },
  },
}
`;
